# MorningStar-Editor-MCP

./: .gitignore  LICENSE  MC8_MCP_TOOL_REFERENCE.md  MCP_SHARING_GUIDE.md  PUBLIC_REPO_CONTENTS.md  PUBLISHING_CHECKLIST.md  README.md  README_MORNINGSTAR_MC8.md  morningstar_mc8_mcp.py  pyproject.toml  requirements.txt
tools/: generate_mc8_mcp_tool_reference.py
