[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morningstar-mc8-mcp"
version = "0.1.0"
description = "Morningstar MC8 Pro MCP server over USB MIDI SysEx"
readme = "README_MORNINGSTAR_MC8.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["mcp", "model-context-protocol", "morningstar", "mc8", "midi", "sysex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp==1.26.0",
    "python-dotenv==1.2.2",
    "mido==1.3.3",
    "python-rtmidi==1.5.8",
]

[project.scripts]
morningstar-mc8-mcp = "morningstar_mc8_mcp:main"

[tool.setuptools]
py-modules = ["morningstar_mc8_mcp"]